--- a/WF/.settings/org.eclipse.wst.common.component
+++ b/WF/.settings/org.eclipse.wst.common.component
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="ModuloFinanceiro">
-        <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
+    <wb-module deploy-name="jsf-blank">
+        <wb-resource deploy-path="/" source-path="/WebContent"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/resources"/>
-        <property name="context-root" value="ModuloFinanceiro"/>
-        <property name="java-output-path" value="/ModuloFinanceiro/build/classes"/>
+        <property name="context-root" value="jsf-blank"/>
+        <property name="java-output-path" value="/jsf-blank/build/classes"/>
     </wb-module>
 </project-modules>
