--- a/FinancialControl/.settings/org.eclipse.wst.common.component
+++ b/FinancialControl/.settings/org.eclipse.wst.common.component
@@ -3,6 +3,7 @@
     <wb-module deploy-name="FinacialControl">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/resources"/>
         <property name="java-output-path" value="/FinacialControl/build/classes"/>
         <property name="context-root" value="FinacialControl"/>
     </wb-module>
